argocd/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
spec:
  replicas: 1
  revisionHistoryLimit: 3
  minReadySeconds: 5
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      imagePullSecrets:
        - name: myregistrykey
      containers:
      - name: red
        image: myregistry.int.hapro.xyz/colorslatest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /red
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 200m
            memory: 64Mi
