argocd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: red
  labels:
    app: red
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: red
  clusterIP: None
