argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - www.demo.hapro.xyz
    secretName: www.demo.hapro.xyz
  rules:
  - host: www.demo.hapro.xyz
    http:
      paths:
      - path: /red
        pathType: "Prefix"
        backend:
          serviceName: red
          servicePort: 8080
